# plotly_rust

./: Cargo.toml  Dioxus.toml  package-lock.json  package.json
.git-backup/: config  index
.git-backup/logs/: HEAD
.git-backup/logs/refs/remotes/origin/: master
.git-backup/refs/heads/: master
backend/: .env.production  Cargo.toml
backend/datafolder/: all_cols_fitted_data.json
backend/src/: lib.rs  main.rs  mushroom.rs  practice.rs
backend/src/mushroom_pages/: mod.rs  mushroom_cap_diameter.rs  mushroom_cap_shape.rs  mushroom_class.rs  mushroom_gill_attachment.rs  mushroom_gill_color.rs  mushroom_season.rs  mushroom_stem_color.rs  mushroom_stem_height.rs  mushroom_stem_width.rs
frontend/: Cargo.toml  codedump.md
frontend/assets/: main.css
frontend/src/: home_page.rs  lib.rs  misc.rs  misc_callback.rs  plotly_callback.rs  practice.rs  table_callback.rs
frontend/src/covid/: covid_index.rs  mod.rs
frontend/src/kfc_stock/: kfc_stock_index.rs  mod.rs
frontend/src/mushroom/: callback.rs  mod.rs  mushrom_single_cat_col.rs  mushroom_double_cat_col.rs  mushroom_first_cat_col.rs  mushroom_first_cat_col_markdown.md  mushroom_index.rs
frontend/src/mushroom/mushroom_double_cat_col/: cap_diameter_vs_stem_height.rs  cap_diameter_vs_stem_width.rs  cap_shape_vs_gill_attachment.rs  cap_shape_vs_gill_color.rs  class_vs_cap_diameter.rs  gill_attachment_vs_gill_color.rs  gill_color_vs_stem_color.rs  gill_color_vs_stem_height.rs  gill_color_vs_stem_width.rs  mod.rs  season_vs_cap_diameter.rs  stem_color_vs_class.rs  stem_color_vs_stem_height.rs  stem_width_vs_stem_height.rs
frontend/src/mushroom/mushroom_markdowns/: homepage_markdown.md  mushroom_cap_dia_markdown.md  mushroom_cap_shape_markdown.md  mushroom_class_markdown.md  mushroom_first_cat_col_markdown.md  mushroom_gill_attachment_markdown.md  mushroom_gill_color_markdown.md  mushroom_index_markdown.md  mushroom_season_markdown.md  mushroom_second_cat_col_markdown.md  mushroom_stem_color_markdown.md  mushroom_stem_height_markdown.md  mushroom_stem_width_markdown.md
frontend/src/mushroom/mushroom_single_cat_col/: mod.rs  mushroom_cap_dia_cat_col.rs  mushroom_cap_shape_cat_col.rs  mushroom_class.rs  mushroom_gill_attachment_cat_col.rs  mushroom_gill_color_cat_col.rs  mushroom_season.rs  mushroom_stem_color.rs  mushroom_stem_height_cat_col.rs  mushroom_stem_width_cat_col.rs
src/: main.rs
