[package]
name = "plotly_rust"
version = "0.1.0"
authors = ["h4ck4l1 <sohailmd123@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "frontend",
    "backend"
]
resolver = "2"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
frontend = {path = "frontend"}
tracing-wasm = "0.2.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
