[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["http2"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "chrono", "runtime-tokio", "tls-rustls", "bigdecimal", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hyper = { version = "1.6.0", features = ["full"] }
once_cell = "1.21.0"
rand = { version = "0.9.0", features = ["serde"] }
anyhow = "1.0.95"
polars = { version = "0.46.0", features = ["full","csv"] }
tower-http = { version = "0.6.2", features = ["full"] }
thiserror = "2.0.12"
dotenvy = "0.15.7"
smartcore = "*"

